--- a/module-3/02_CSS_Selectors/exercise-student/style.css
+++ b/module-3/02_CSS_Selectors/exercise-student/style.css
@@ -15,3 +15,14 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+aside {
+  position: fixed;
+  width: 200px;
+  border-right: 1px;
+  border-color: rgba(0, 173, 238, 0.4);
+  border-style: solid;
+  height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
+}
