--- a/module-3/03_CSS_Grid/exercise-student/style.css
+++ b/module-3/03_CSS_Grid/exercise-student/style.css
@@ -28,6 +28,7 @@ h1#headline {
 h2 {
     font-size: 1.8em;
     line-height: 1.45em;
+    text-align: left;
 }
 
 h3 {
@@ -41,6 +42,7 @@ header img {
 
 .student-gray {
     color: #505355;
+    text-align: center;
 }
 
 .italic-text {
@@ -49,5 +51,73 @@ header img {
 
 #student-picture img{
     border-radius: 50%;
+    text-align: center;
 }
 
+main#main-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: 
+    "headline headline student-picture"
+    "student-quote student-quote student-picture"
+    "student-profile student-profile student-contact"
+    "experience-grid experience-grid experience-grid"
+    ;
+    row-gap: 20px;
+    column-gap: 50px;
+    align-items: center;
+}
+
+main#main-grid > div#experience-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 20px;
+    column-gap: 50px;
+    grid-template-areas: 
+    "experience-code experience-code"
+    "experience-database experience-database"
+    "experience-web experience-design"
+    ;
+}
+ 
+h1#headline {
+    grid-area: headline;
+}
+
+div#student-picture {
+    grid-area: student-picture;
+   
+}
+
+div#student-quote{
+    grid-area: student-quote;
+}
+
+div#student-profile{
+    grid-area: student-profile;
+}
+
+div#student-contact{
+    grid-area: student-contact;
+}
+
+main#main-grid > div#experience-grid {
+    grid-area: experience-grid;
+}
+
+
+div#experience-code {
+    grid-area: experience-code;
+}
+
+div#experience-database {
+    grid-area: experience-database;
+}
+
+div#experience-web {
+    grid-area: experience-web;
+}
+
+div#experience-design {
+    grid-area: experience-design;
+} 
