--- a/module-3/04_Flexbox/tutorial-student/styles.css
+++ b/module-3/04_Flexbox/tutorial-student/styles.css
@@ -11,6 +11,10 @@ body {
   box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.2);
   padding-left: 10px;
   padding-right: 10px;
+  grid-area: header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 #left-panel {
   grid-area: left-panel;
@@ -22,14 +26,19 @@ aside#special-announcements {
   grid-area: special-announcements;
 }
 
+aside#weather{
+  grid-area: weather;
+}
+
 div.container {
   display: grid;
   grid-template-columns: 300px 1fr 250px;
   grid-template-rows: 100px 1fr 1fr;
   gap: 15px;
   grid-template-areas:
+    "header header header"
     "left-panel main special-announcements"
-    "left-panel main .";
+    "left-panel main weather";
 }
 
 #page-header img {
@@ -183,10 +192,17 @@ aside#weather section p {
       "special-announcements"
       "weather";
   }
+
+  aside#weather section{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+  }
   #page-header {
     height: auto;
     width: 100%;
     padding: 0;
+    justify-content: space-evenly;
   }
   #page-header img {
     height: 40px;
@@ -236,6 +252,7 @@ aside#weather section p {
 @media screen and (max-width: 536px) {
   #page-header {
     padding-top: 5px;
+    flex-wrap: wrap;
   }
   #page-header nav ul {
     margin-top: 10px;
