--- a/module-3/04_Flexbox/exercise-student/mini-exercises/flex-wrap/step-1/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/flex-wrap/step-1/main.css
@@ -9,7 +9,6 @@ body {
   background-color: #F0F0F0;
   width: 290px;
   padding: 20px;
-  display: flex;
 }
 
 .box {
@@ -19,4 +18,10 @@ body {
   color: #fff;
   text-align: center;
   border: solid 1px #777;
+}
+
+.container,
+.box{
+  display: flex;
+  flex-wrap: wrap;
 }
