--- a/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-2/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-2/main.css
@@ -41,3 +41,19 @@ a:hover {
   color: #00AFEF;
   text-decoration: underline;
 }
+
+nav, 
+ul {
+  display: flex;
+  justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
