--- a/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-3/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-3/main.css
@@ -41,3 +41,12 @@ a:hover {
   color: #00AFEF;
   text-decoration: underline;
 }
+
+header{
+  display: flex;
+}
+
+nav ul{
+  display: flex;
+  justify-content: flex-end;
+}
