--- a/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-4/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-4/main.css
@@ -38,8 +38,20 @@ li a:hover {
   text-decoration: underline;
 }
 
-.spacer {}
+.spacer {
+  flex-basis: 100%;
+}
 
 .my-account img {
   width: 32px;
 }
+
+header{
+  display: flex;
+}
+nav ul{
+display: flex;
+justify-content: flex-start;
+}
+
+
